--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -320,7 +320,7 @@ Adds an employee to PTMan. +
 [TIP]
 An employee can have any number of tags (including 0)
 
-Guided Example:
+*Guided Example*:
 
 . We have an employee *John Doe* with phone number *98765432*, email address *johnd@example.com*, and stays in *311, Clementi Ave 2, #02-25*.
 He has earned *$0* so far, and takes the role of a *Barista* and a *Cashier*. +
@@ -340,7 +340,7 @@ _<<fig-Add2>>_ shows how PTMan should look like after the above command.
 image::Ui_add2.png[width="790"]
 
 
-More Examples:
+*More Examples*:
 
 * To add an employee named `John Doe` with phone number `98765432`, address `John street, block 123, #01-01`, and salary of $`0`, type: +
 `add n/John Doe p/98765432 e/johnd@example.com a/John street, block 123, #01-01 s/0`  +
@@ -389,7 +389,7 @@ An employee's password can only be edited by the employee. +
 ****
 
 // TODO: SCREENSHOT BEFORE + AFTER
-Examples:
+*Examples*:
 
 * To edit the phone number and email address of the employee `1` to be `91234567` and `johndoe@example.com` respectively, type: +
 `edit 1 p/91234567 e/johndoe@example.com` +
@@ -410,7 +410,7 @@ Deletes the specified employee from PTMan. +
 * The INDEX *must be a positive integer* 1, 2, 3, ...
 ****
 
-Examples:
+*Examples*:
 
 * To delete employee `2`, type: +
 `delete 2` +
@@ -444,7 +444,7 @@ Restores PTMan to the state before the previous _undoable_ command was executed.
 Undoable commands: Commands that modify PTMan's data (`add`, `delete`, `edit`, `clear`, `addshift`, `deleteshift`, `apply`, `unapply`, `editoutlet` and `announcement`).
 ====
 
-Examples:
+*Examples*:
 
 * `delete 1` +
 `undo` (reverses the `delete 1` command) +
@@ -466,7 +466,7 @@ Reverses the most recent `undo` command. +
 *Format:* `redo` +
 *Shorthand:* `r`
 
-Examples:
+*Examples*:
 
 * `delete 1` +
 `undo` (reverses the `delete 1` command) +
@@ -500,7 +500,7 @@ Edits the outlet information. +
 [IMPORTANT]
 Ensure that the outlet email is valid as it will be used to reset the admin password should you forget it.
 
-Examples:
+*Example*:
 
 . When you first start using PTMan, your outlet information will be default values as shown in _<<fig-DefaultOutlet>>_.
 +
@@ -536,7 +536,7 @@ Sets an announcement for the outlet. +
 *Format:* `announcement ANNOUNCEMENT_MESSAGE` +
 *Shorthand:* `announce`
 
-Examples:
+*Example*:
 
 . Your store has a *new drink released this coming Wednesday*, and you want your employees who come working on Wednesday to be
 familiar with the recipe for it. You can leave a note for your employees so that they can be prepared for their shifts.
@@ -601,7 +601,6 @@ image::OutletInformationDecryptedXMLFile.jpg[width="790"]
 ==== Adding a shift: `addshift`
 Adds a shift to the timetable to indicate that you require employees at that period. +
 
-// TODO: SCREENSHOT
 *Format:* `addshift d/DATE ts/START_TIME te/END_TIME c/EMPLOYEE_CAPACITY` +
 *Shorthand:* `as`
 
@@ -611,12 +610,21 @@ Adds a shift to the timetable to indicate that you require employees at that per
 * The `CAPACITY` should be a positive integer.
 ****
 
-Examples:
+*Example*:
 
-* To add a shift on 12 March 2018 from 12pm to 7pm that requires 4 employees, type: +
-`addshift d/12-03-18 ts/1200 te/1900 c/4`
-* To add a shift on 3 May 2018 from 8am to 1pm that requires 2 employees, type: +
-`addshift d/03-05-18 ts/0800 te/1300 c/2`
+. To add a shift on 13th April 2018 from 12pm to 6pm that requires 3 employees, execute the command +
+`addshift d/13-04-18 ts/1200 te/1800 c/3` as shown in _<<fig-addshiftBefore>>_.
++
+[[fig-addshiftBefore]]
+.Adding a Shift +
+image::AddShiftBefore.png[width="800"]
++
+. You should see a confirmation message in the feedback box along with the shift you've added being displayed in the timetable.
+This is illustrated in _<<fig-addshiftAfter>>_.
++
+[[fig-addshiftAfter]]
+.Successful Adding of a Shift +
+image::AddShiftAfter.png[width="800"]
 
 [[Deleteshift]]
 ==== Deleting a shift: `deleteshift`
@@ -629,12 +637,20 @@ Deletes a shift from the timetable.
 * The `SHIFT_INDEX` *must be a positive integer* 1, 2, 3, ...
 ****
 
-Examples:
+*Example*:
 
-* To delete shift `4`, type: +
-`deleteshift 4`
-* To delete shift `2`, type: +
-`deleteshift 2`
+. If you wish to delete shift 1, execute the command `deleteshift 1` as shown in _<<fig-deleteShiftBefore>>_ below.
++
+[[fig-deleteShiftBefore]]
+.Deleting Shift 1 +
+image::DeleteShiftBefore.png[width="800"]
++
+. Upon successful deletion, you will see a confirmation message in the feedback box and you can no longer see the shift in the timetable.
+_<<fig-deleteShiftAfter>>_ illustrates the successful deletion of shift 1.
++
+[[fig-deleteShiftAfter]]
+.Successful Deletion of Shift 1 +
+image::DeleteShiftAfter.png[width="800"]
 
 [[Apply]]
 ==== Applying an employee for a shift: `apply`
@@ -648,13 +664,21 @@ Applies an employee for a shift. +
 * Both indexes *must be positive integers* 1, 2, 3, ...
 ****
 
-// TODO: SCREENSHOT
-Examples:
+*Example*:
 
-* To apply employee `2` for shift `1`, type: +
-`apply 2 1`
-* To apply employee `6` for shift `5`, type: +
-`apply 6 5`
+. To apply the 2nd employee in the list for shift 3, execute the command `apply 2 3` as shown in _<<fig-applyAdminBefore>>_ below.
++
+[[fig-applyAdminBefore]]
+.Applying Employee 2 to Shift 3 +
+image::ApplyAdminBefore.png[width="800"]
+
++
+. As highlighted by the red boxes in _<<fig-applyAdminAfter>>_, you should see a confirmation message in the feedback box
+and the slots left in the shift will decrease by 1 upon successful application.
++
+[[fig-applyAdminAfter]]
+.Successful Application of Employee 2 to Shift 3 +
+image::ApplyAdminAfter.png[width="800"]
 
 [NOTE]
 If you have accidentally applied the employee for the wrong shift, you may use the `unapply` command. +
@@ -672,12 +696,19 @@ Removes an employee from a shift. +
 * Both indexes *must be positive integers* 1, 2, 3, ...
 ****
 
-Examples:
+*Example*:
 
-* To remove employee `6` from shift `3`, type: +
-`unapply 6 3`
-* To remove employee `2` from shift `6`, type: +
-`unapply 2 6`
+. To remove the 2nd employee from shift 3, execute the command `unapply 2 3` as shown in _<<fig-unapplyAdminBefore>>_ below.
++
+[[fig-unapplyAdminBefore]]
+.Removing Employee 2 from Shift 3 +
+image::UnapplyAdminBefore.png[width="800"]
+. As highlighted by the red boxes in _<<fig-unapplyAdminAfter>>_, you should see a confirmation message in the feedback box
+and the slots left in the shift will increase by 1 upon successful removal.
++
+[[fig-unapplyAdminAfter]]
+.Successful Removal of Employee 2 from Shift 3 +
+image::UnapplyAdminAfter.png[width="800"]
 // end::shiftmanager[]
 
 === Employee Commands
@@ -697,13 +728,21 @@ Applies for a shift. +
 * Both indexes *must be positive integers* 1, 2, 3, ...
 ****
 
-// TODO: SCREENSHOT
-Examples:
+*Example*:
 
-* If your index in the employee list is `2` and you want to apply for shift `1`, type: +
-`apply 2 1 pw/YOUR_PASSWORD`
-* If your index in the employee list is `6` and you want to apply for shift `5`, type: +
-`apply 6 5 pw/YOUR_PASSWORD`
+. If you are the 2nd employee in the list and you wish to apply for shift 3, execute the command +
+`apply 2 3 pw/YOUR_PASSWORD` as shown in _<<fig-applyBefore>>_ below.
++
+[[fig-applyBefore]]
+.Applying Employee 2 to Shift 3 +
+image::ApplyBefore.png[width="800"]
++
+. As highlighted by the red boxes in _<<fig-applyAfter>>_, you should see a confirmation message in the feedback box
+and the slots left in the shift will decrease by 1 upon successful application.
++
+[[fig-applyAfter]]
+.Successful Application of Employee 2 to Shift 3 +
+image::ApplyAfter.png[width="800"]
 
 [NOTE]
 If you have accidentally applied for the wrong shift, you may use the `unapply` command. +
@@ -721,12 +760,21 @@ Removes youreself from a shift. +
 * Both indexes *must be positive integers* 1, 2, 3, ...
 ****
 
-Examples:
+*Example*:
 
-* If your index is `4` and you wish to unapply from shift `3`, type: +
-`unapply 4 3 pw/YOUR_PASSWORD`
-* If your index is `2` and you wish to unapply from shift `1`, type: +
-`unapply 2 1 pw/YOUR_PASSWORD`
+. If you are the 2nd employee in the list and you wish to remove yourself from shift 3, execute the command +
+`unapply 2 3 pw/YOUR_PASSWORD` as shown in _<<fig-unapplyBefore>>_ below.
++
+[[fig-unapplyBefore]]
+.Removing Employee 2 from Shift 3 +
+image::UnapplyBefore.png[width="800"]
++
+. As highlighted by the red boxes in _<<fig-unapplyAfter>>_, you should see a confirmation message in the feedback box
+and the slots left in the shift will increase by 1 upon successful removal.
++
+[[fig-unapplyAfter]]
+.Excpected Outcome After Applying Employee 2 to Shift 3 +
+image::UnapplyAfter.png[width="800"]
 // end::shiftemployee[]
 
 [[Cp]]
@@ -838,8 +886,7 @@ Finds employees whose names contain any of the given keywords. +
 * Employees matching at least one keyword will be returned (i.e. `OR` search). e.g. `Hans Bo` will return `Hans Gruber`, `Bo Yang`
 ****
 
-// TODO: SCREENSHOT BEFORE + AFTER
-Examples:
+*Examples*:
 
 * To find employees `john` and `John Doe`, type: +
  `find John`
@@ -873,7 +920,7 @@ Displays the shifts of the selected employee on the timetable view. Shifts appli
 *Shorthand:* `s EMPLOYEE_INDEX`
 
 // TODO: SCREENSHOT
-Examples:
+*Examples*:
 
 * To select employee `2` and displays their shifts in the timetable, type: +
 `select 2` +
@@ -905,7 +952,7 @@ Exports the current timetable displayed as an image and either saves it locally 
 *Format:* `export [e/EMAIL]` +
 *Shorthand:* `exp [e/EMAIL]`
 
-Examples:
+*Examples*:
 
 * To export the current timetable in PTMan, type: +
 `export` +
