Minor amendments to UG

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -708,7 +708,7 @@ Adds a shift to the timetable to indicate that you require employees at that per
 .Adding a Shift +
 image::AddshiftBefore.png[width="800"]
 +
-. You should see a confirmation message in the feedback box along with the shift you've added being displayed in the timetable.
+. You should see a confirmation message in the result display along with the shift you've added being displayed in the timetable.
 This is illustrated in _<<fig-addshiftAfter>>_.
 +
 [[fig-addshiftAfter]]
@@ -734,7 +734,7 @@ Deletes a shift from the timetable.
 .Deleting Shift 1 +
 image::DeleteShiftBefore.png[width="800"]
 +
-. Upon successful deletion, you will see a confirmation message in the feedback box and you can no longer see the shift in the timetable.
+. Upon successful deletion, you will see a confirmation message in the result display and you can no longer see the shift in the timetable.
 _<<fig-deleteShiftAfter>>_ illustrates the successful deletion of shift 1.
 +
 [[fig-deleteShiftAfter]]
@@ -763,7 +763,7 @@ Applies an employee for a shift. +
 image::ApplyAdminBefore.png[width="800"]
 
 +
-. As highlighted by the red boxes in _<<fig-applyAdminAfter>>_, you should see a confirmation message in the feedback box
+. As highlighted by the red boxes in _<<fig-applyAdminAfter>>_, you should see a confirmation message in the result display
 and the slots left in the shift will decrease by 1 upon successful application.
 +
 [[fig-applyAdminAfter]]
@@ -793,7 +793,7 @@ Removes an employee from a shift. +
 [[fig-unapplyAdminBefore]]
 .Removing Employee 2 from Shift 3 +
 image::UnapplyAdminBefore.png[width="800"]
-. As highlighted by the red boxes in _<<fig-unapplyAdminAfter>>_, you should see a confirmation message in the feedback box
+. As highlighted by the red boxes in _<<fig-unapplyAdminAfter>>_, you should see a confirmation message in the result display
 and the slots left in the shift will increase by 1 upon successful removal.
 +
 [[fig-unapplyAdminAfter]]
@@ -826,7 +826,7 @@ Applies for a shift. +
 .Applying Employee 2 to Shift 3 +
 image::ApplyBefore.png[width="800"]
 +
-. As highlighted by the red boxes in _<<fig-applyAfter>>_, you should see a confirmation message in the feedback box
+. As highlighted by the red boxes in _<<fig-applyAfter>>_, you should see a confirmation message in the result display
 and the slots left in the shift will decrease by 1 upon successful application.
 +
 [[fig-applyAfter]]
@@ -858,7 +858,7 @@ Removes youreself from a shift. +
 .Removing Employee 2 from Shift 3 +
 image::UnapplyBefore.png[width="800"]
 +
-. As highlighted by the red boxes in _<<fig-unapplyAfter>>_, you should see a confirmation message in the feedback box
+. As highlighted by the red boxes in _<<fig-unapplyAfter>>_, you should see a confirmation message in the result display
 and the slots left in the shift will increase by 1 upon successful removal.
 +
 [[fig-unapplyAfter]]
